--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -32,5 +32,12 @@
   },
   "dependencies": {
     "@openai/codex": "workspace:*"
-  }
+  },
+  "codexCommands": [
+    "Explain codebase",
+    "Refactor code",
+    "Write unit",
+    "Write unit tests for code",
+    "Look for vulnerabilities for code"
+  ]
 }
