fix vscode tsconfig for types

--- a/packages/vscode/tsconfig.json
+++ b/packages/vscode/tsconfig.json
@@ -7,7 +7,10 @@
     "sourceMap": true,
     "rootDir": "src",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "types": ["node", "vscode"],
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
